правки мови, кнопки та посилань у футері

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -28,9 +28,10 @@
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <a href="">Замовити послугу</a>
-      </section>
+        <button name="button">Замовити послугу</button>
+        </section>
       <section>
+        <h2>Наші особливості</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -75,22 +76,22 @@
           <li>
             <img src="./images/1.jpg" alt="" />
             <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/2.jpg" alt="" />
             <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/3.jpg" alt="" />
             <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/4.jpg" alt="" />
             <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -98,9 +99,13 @@
     <!-- basement -->
     <footer>
       <a href="">WebStudio</a>
-      <p>м. Київ, пр-т Лесі Українки, 26</p>
-      <p>info@devstudio.com</p>
-      <p>+38 096 111 11 11</p>
+        <address>
+          <p>м. Київ, пр-т Лесі Українки, 26</p>
+         <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
+        </address>
     </footer>
   </body>
 </html>
