--- a/index.html
+++ b/index.html
@@ -5,31 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!-- top -->
     <header>
-      <nav>
-        <a href="">WebStudio</a>
-        <ul>
-          <li><a href="">Студія</a></li>
+      <nav class="nav">
+        <a href class="webstudio">Web <span class="Studio_color">Studio</span></a>
+        <ul class="list_studio">
+          <li><a href class="Link_Studio">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+38 096 111 11 11</a></li>
+        <li class="mail_link"><a href class="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="mail_link"><a href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
+      <section class="button_title">
         <h1>
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button name="button">Замовити послугу</button>
-        </section>
+        <button name class="button">Замовити послугу</button>
+      </section>
       <section>
         <h2>Наші особливості</h2>
         <ul>
@@ -97,15 +98,15 @@
       </section>
     </main>
     <!-- basement -->
-    <footer>
-      <a href="">WebStudio</a>
-        <address>
-          <p>м. Київ, пр-т Лесі Українки, 26</p>
-         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
+    <footer class="footer">
+      <a href class="webstudio">Web <span class="Studio_color">Studio</span></a>
+      <address>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <ul class="footer_contacts">
+          <li class="mail_link"><a href ="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="mail_link"><a href ="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
         </ul>
-        </address>
+      </address>
     </footer>
   </body>
 </html>
