--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,16 +11,16 @@
     <!-- top -->
     <header>
       <nav class="nav">
-        <a href class="webstudio">Web <span class="Studio_color">Studio</span></a>
+        <a href="webstudio">Web <span class="Studio_color">Studio</span></a>
         <ul class="list_studio">
-          <li><a href class="Link_Studio">Студія</a></li>
+          <li><a href="Link_Studio">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
-        <li class="mail_link"><a href class="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="mail_link"><a href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        <li class="mail_link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="mail_link"><a href="tell:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -29,7 +29,7 @@
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button name class="button">Замовити послугу</button>
+        <button name="кнопка">Замовити послугу</button>
       </section>
       <section>
         <h2>Наші особливості</h2>
@@ -66,31 +66,51 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="./images/img.png" alt="" /></li>
-          <li><img src="./images/img (1).png" alt="" /></li>
-          <li><img src="./images/img (2).png" alt="" /></li>
+          <li>
+            <img 
+            src="./images/img.png" alt="картинка набір коду" 
+            width="370"
+            />
+           </li>
+          <li>
+            <img 
+              src="./images/img(1).png" 
+              alt="картинка телефон та ноут"
+              width="370" />
+          </li>
+          <li><img src="./images/img(2).png" alt="картинка планшет та комп"
+            width="370" /></li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/1.jpg" alt="" />
+            <img 
+              src="./images/1.jpg" alt=""
+              width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/2.jpg" alt="" />
+            <img 
+              src="./images/2.jpg" alt=""
+              width="270" />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/3.jpg" alt="" />
+            <img 
+              src="./images/3.jpg" alt=""
+              width="270" />
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./images/4.jpg" alt="" />
+            <img 
+              src="./images/4.jpg" alt=""
+              width="270" 
+            />
             <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
@@ -99,12 +119,12 @@
     </main>
     <!-- basement -->
     <footer class="footer">
-      <a href class="webstudio">Web <span class="Studio_color">Studio</span></a>
+      <a href="webstudio">Web <span class="Studio_color">Studio</span></a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer_contacts">
           <li class="mail_link"><a href ="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="mail_link"><a href ="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
+          <li class="mail_link"><a href ="tell:+380961111111">+380961111111</a></li>
         </ul>
       </address>
     </footer>
