підсумки по 1 модулю

--- a/index.html
+++ b/index.html
@@ -4,14 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <title>Home_work</title>
+    <meta name="description" content="короткий опис сайту при пошуку">
+
+    <!--favicon_start-->
+    <link rel="apple-touch-icon" sizes="57x57" href="./images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./image/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!--favicon_finish-->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- top -->
     <header>
       <nav class="nav">
-        <a href="webstudio">Web <span class="Studio_color">Studio</span></a>
+        <a class="web" href="./index.html">Web <span class="Studio_color_header">Studio</span></a>
         <ul class="list_studio">
           <li><a href="Link_Studio">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
@@ -19,8 +40,12 @@
         </ul>
       </nav>
       <ul>
-        <li class="mail_link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="mail_link"><a href="tell:+380961111111">+38 096 111 11 11</a></li>
+        <li class="mail_link">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="mail_link">
+          <a href="tell:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -67,50 +92,44 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img 
-            src="./images/img.png" alt="картинка набір коду" 
-            width="370"
-            />
-           </li>
-          <li>
-            <img 
-              src="./images/img(1).png" 
-              alt="картинка телефон та ноут"
-              width="370" />
+            <img src="./images/img.png" alt="картинка набір коду" width="370" />
           </li>
-          <li><img src="./images/img(2).png" alt="картинка планшет та комп"
-            width="370" /></li>
+          <li>
+            <img
+              src="./images/img(1).png"
+              alt="картинка телефон та ноут"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img(2).png"
+              alt="картинка планшет та комп"
+              width="370"
+            />
+          </li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img 
-              src="./images/1.jpg" alt=""
-              width="270" />
+            <img src="./images/1.jpg" alt="" width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img 
-              src="./images/2.jpg" alt=""
-              width="270" />
+            <img src="./images/2.jpg" alt="" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img 
-              src="./images/3.jpg" alt=""
-              width="270" />
+            <img src="./images/3.jpg" alt="" width="270" />
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img 
-              src="./images/4.jpg" alt=""
-              width="270" 
-            />
+            <img src="./images/4.jpg" alt="" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
@@ -119,12 +138,16 @@
     </main>
     <!-- basement -->
     <footer class="footer">
-      <a href="webstudio">Web <span class="Studio_color">Studio</span></a>
+      <a class="web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer_contacts">
-          <li class="mail_link"><a href ="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="mail_link"><a href ="tell:+380961111111">+380961111111</a></li>
+          <li class="mail_link">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="mail_link">
+            <a href="tell:+380961111111">+380961111111</a>
+          </li>
         </ul>
       </address>
     </footer>
