--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+   <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home_work</title>
@@ -28,8 +28,9 @@
     <!--favicon_finish-->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <!-- top -->
+</head>
+<body>
+     <!-- top -->
     <header>
       <nav class="nav">
         <a class="web" href="./index.html">Web <span class="Studio_color_header">Studio</span></a>
@@ -49,94 +50,63 @@
       </ul>
     </header>
     <main>
-      <section class="button_title">
-        <h1>
-          Ефективні рішення для <br />
-          вашого бізнесу
-        </h1>
-        <button name="кнопка">Замовити послугу</button>
-      </section>
-      <section>
-        <h2>Наші особливості</h2>
         <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
+            <li><a href="">Усі</a></li>
+            <li><a href="">Веб-сайти</a></li>
+            <li><a href="">Додатки</a></li>
+            <li><a href="">Дизайн</a></li>
+            <li><a href="">Маркетинг</a></li>
         </ul>
-      </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
+        <!--роботи-->
         <ul>
-          <li>
-            <img src="./images/img.png" alt="картинка набір коду" width="370" />
-          </li>
-          <li>
-            <img
-              src="./images/img(1).png"
-              alt="картинка телефон та ноут"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img(2).png"
-              alt="картинка планшет та комп"
-              width="370"
-            />
-          </li>
+            <li>
+                <img src="./images/progect/1.png" alt="">
+                <h3>Технокряк</h3>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/progect/2.png" alt="">
+                <h3>Постер New Orlean vs Golden Star</h3>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/progect/3.png" alt="">
+                <h3>Ресторан Seafood</h3>
+                <p>Додаток</p>
+            </li>           
+            <li>
+                <img src="./images/progect/4.png" alt="">
+                <h3> Проєкт Prime</h3>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/progect/5.png" alt="">
+                <h3>Проєкт Boxes</h3>
+                <p>Додаток</p>
+            </li>
+            <li>
+                <img src="./images/progect/6.png" alt="">
+                <h3>Inspiration has no Borders</h3>
+                <p>Веб-сайт</p>
+            </li>
+            <li>
+                <img src="./images/progect/7.png" alt="">
+                <h3>Видання Limited Edition</h3>
+                <p>Дизайн</p>
+            </li>
+            <li>
+                <img src="./images/progect/8.png" alt="">
+                <h3>Проєкт LAB</h3>
+                <p>Маркетинг</p>
+            </li>
+            <li>
+                <img src="./images/progect/9.png" alt="">
+                <h3>Growing Business</h3>
+                <p>Додаток</p>
+            </li>
         </ul>
-      </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/1.jpg" alt="" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/2.jpg" alt="" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/3.jpg" alt="" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/4.jpg" alt="" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
-          </li>
-        </ul>
-      </section>
     </main>
-    <!-- basement -->
+       <!-- basement -->
     <footer class="footer">
       <a class="web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
       <address>
@@ -151,5 +121,5 @@
         </ul>
       </address>
     </footer>
-  </body>
+</body>
 </html>
