--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <meta name="theme-color" content="#ffffff">
     <!--favicon_finish-->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="">
   </head>
   <body>
     <!-- top -->
@@ -34,27 +35,27 @@
       <nav class="nav">
         <a class="web" href="./index.html">Web <span class="Studio_color_header">Studio</span></a>
         <ul class="list_studio">
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li><a class="link2" href="./index.html">Студія</a></li>
+          <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
         <li class="mail_link">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li class="mail_link">
-          <a href="tell:+380961111111">+38 096 111 11 11</a>
+          <a class="link" href="tell:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-      <section class="button_title">
+      <section class="button_title" x>
         <h1>
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button name="кнопка">Замовити послугу</button>
+        <button class="link1" name="кнопка">Замовити послугу</button>
       </section>
       <section>
         <h2>Наші особливості</h2>
@@ -110,7 +111,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="command">
         <h2>Наша команда</h2>
         <ul>
           <li>
@@ -137,16 +138,16 @@
       </section>
     </main>
     <!-- basement -->
-    <footer class="footer">
+    <footer>
       <a class="web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer_contacts">
-          <li class="mail_link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li >
+            <a class="mail_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="mail_link">
-            <a href="tell:+380961111111">+38 096 11 11 111</a>
+          <li >
+            <a class="mail_link" href="tell:+380961111111">+38 096 11 11 111</a>
           </li>
         </ul>
       </address>
