--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home_work</title>
+    <title>Home_work_2</title>
     <meta name="description" content="короткий опис сайту при пошуку">
 
     <!--favicon_start-->
@@ -35,28 +35,38 @@
       <nav class="nav">
         <a class="web" href="./index.html">Web <span class="Studio_color_header">Studio</span></a>
         <ul class="list_studio">
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li><a class="link" href="./index.html">Студія</a></li>
+          <li><a class="link2" href="./portfolio.html">Портфоліо</a></li>
+          <li><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
         <li class="mail_link">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li class="mail_link">
-          <a href="tell:+380961111111">+38 096 111 11 11</a>
+          <a class="link" href="tell:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
-        <ul>
-            <li><a href="">Усі</a></li>
-            <li><a href="">Веб-сайти</a></li>
-            <li><a href="">Додатки</a></li>
-            <li><a href="">Дизайн</a></li>
-            <li><a href="">Маркетинг</a></li>
-        </ul>
+      <ul>
+        <li>
+          <button class="link1" name="кнопка">Усі</button>
+        </li>
+        <li>
+          <button name="кнопка">Веб-сайти</button>
+        </li>
+        <li>
+          <button name="кнопка">Додатки</button>
+        </li>
+        <li>
+          <button name="кнопка">Дизайн</button>
+        </li>
+        <li>
+          <button name="кнопка">Маркетинг</button>
+        </li>
+  
         <!--роботи-->
         <ul>
             <li>
@@ -112,11 +122,11 @@
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer_contacts">
-          <li class="mail_link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li>
+            <a class="mail_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="mail_link">
-            <a href="tell:+380961111111">+38 096 11 11 111</a>
+          <li>
+            <a class="mail_link" href="tell:+380961111111">+38 096 11 11 111</a>
           </li>
         </ul>
       </address>
