селектори та колір

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
     <meta name="msapplication-TileImage" content="./images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!--favicon_finish-->
+    <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 </head>
@@ -52,19 +53,19 @@
     <main>
       <ul>
         <li>
-          <button class="link1" name="кнопка">Усі</button>
+          <button class="link1" name="кнопка" type="button">Усі</button>
         </li>
         <li>
-          <button name="кнопка">Веб-сайти</button>
+          <button name="кнопка"type="button">Веб-сайти</button>
         </li>
         <li>
-          <button name="кнопка">Додатки</button>
+          <button name="кнопка"type="button">Додатки</button>
         </li>
         <li>
-          <button name="кнопка">Дизайн</button>
+          <button name="кнопка"type="button">Дизайн</button>
         </li>
         <li>
-          <button name="кнопка">Маркетинг</button>
+          <button name="кнопка"type="button">Маркетинг</button>
         </li>
   
         <!--роботи-->
