--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button class="link1" name="кнопка">Замовити послугу</button>
       </section>
       <section>
-        <h2>Наші особливості</h2>
+        <h2 class="visually-hidden">Наші особливості</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
