текст та шрифти

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,11 @@
     <meta name="msapplication-TileImage" content="./images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!--favicon_finish-->
-    <link  rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <!-- підключення шрифтів -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
 </head>
 <body>
@@ -69,7 +72,7 @@
         </li>
   
         <!--роботи-->
-        <ul>
+        <ul class="any-works">
             <li>
                 <img src="./images/progect/1.png" alt="">
                 <h3>Технокряк</h3>
