--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <meta name="theme-color" content="#ffffff">
     <!--favicon_finish-->
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="">
+    <!-- підключення шрифтів -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- top -->
@@ -55,7 +58,7 @@
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button class="link1" name="кнопка">Замовити послугу</button>
+        <button class="button_servise" name="кнопка">Замовити послугу</button>
       </section>
       <section>
         <h2 class="visually-hidden">Наші особливості</h2>
@@ -89,8 +92,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="work">
+        <h2 class="work-specific">Чим ми займаємося</h2>
         <ul>
           <li>
             <img src="./images/img.png" alt="картинка набір коду" width="370" />
@@ -111,9 +114,9 @@
           </li>
         </ul>
       </section>
-      <section class="command">
-        <h2>Наша команда</h2>
-        <ul>
+      <section> 
+        <h2  class="command">Наша команда</h2>
+        <ul class="command_title">
           <li>
             <img src="./images/1.jpg" alt="" width="270" />
             <h3>Ігор Дем'яненко</h3>
