--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li class="mail_link">
           <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -62,7 +62,7 @@
       </section>
       <section>
         <h2 class="visually-hidden">Наші особливості</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
@@ -94,7 +94,7 @@
       </section>
       <section class="work">
         <h2 class="work-specific">Чим ми займаємося</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/img.png" alt="картинка набір коду" width="370" />
           </li>
