--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
           <li><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list">
         <li class="mail_link">
           <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -54,7 +54,7 @@
       </ul>
     </header>
     <main>
-      <ul>
+      <ul class="list">
         <li>
           <button class="link1" name="кнопка" type="button">Усі</button>
         </li>
