--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
     <main>
       <section class="button_title" x>
-        <h1>
+        <h1 class="body-title">
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
@@ -65,27 +65,27 @@
         <ul class="list">
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <p class="paragraf">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <p class="paragraf">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
             <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <p class="paragraf">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <p class="paragraf">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -119,23 +119,23 @@
         <ul class="command_title">
           <li>
             <img src="./images/1.jpg" alt="" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="name">Ігор Дем'яненко</h3>
+            <p class="paragraf" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/2.jpg" alt="" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="name">Ольга Рєпіна</h3>
+            <p class="paragraf" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/3.jpg" alt="" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="name">Микола Тарасов</h3>
+            <p class="paragraf" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/4.jpg" alt="" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="name">Михайло Єрмаков</h3>
+            <p class="paragraf" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
