--- a/portfolio.html
+++ b/portfolio.html
@@ -75,48 +75,48 @@
         <ul class="any-works">
             <li>
                 <img src="./images/progect/1.png" alt="">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <h3 class="name">Технокряк</h3>
+                <p class ="paragraf">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/progect/2.png" alt="">
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+                <h3 class="name">Постер New Orlean vs Golden Star</h3>
+                <p class ="paragraf">Дизайн</p>
             </li>
             <li>
                 <img src="./images/progect/3.png" alt="">
-                <h3>Ресторан Seafood</h3>
-                <p>Додаток</p>
+                <h3 class="name">Ресторан Seafood</h3>
+                <p class ="paragraf">Додаток</p>
             </li>           
             <li>
                 <img src="./images/progect/4.png" alt="">
-                <h3> Проєкт Prime</h3>
-                <p>Маркетинг</p>
+                <h3 class="name"> Проєкт Prime</h3>
+                <p class ="paragraf">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/progect/5.png" alt="">
-                <h3>Проєкт Boxes</h3>
-                <p>Додаток</p>
+                <h3 class="name">Проєкт Boxes</h3>
+                <p class ="paragraf">Додаток</p>
             </li>
             <li>
                 <img src="./images/progect/6.png" alt="">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+                <h3 class="name">Inspiration has no Borders</h3>
+                <p class ="paragraf">Веб-сайт</p>
             </li>
             <li>
                 <img src="./images/progect/7.png" alt="">
-                <h3>Видання Limited Edition</h3>
+                <h3 class="name">Видання Limited Edition</h3>
                 <p>Дизайн</p>
             </li>
             <li>
                 <img src="./images/progect/8.png" alt="">
-                <h3>Проєкт LAB</h3>
-                <p>Маркетинг</p>
+                <h3 class="name">Проєкт LAB</h3>
+                <p class ="paragraf">Маркетинг</p>
             </li>
             <li>
                 <img src="./images/progect/9.png" alt="">
-                <h3>Growing Business</h3>
-                <p>Додаток</p>
+                <h3 class="name">Growing Business</h3>
+                <p class ="paragraf">Додаток</p>
             </li>
         </ul>
     </main>
