--- a/index.html
+++ b/index.html
@@ -64,27 +64,27 @@
         <h2 class="visually-hidden">Наші особливості</h2>
         <ul class="list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="title-section">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="paragraf">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="title-section">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="paragraf">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="title-section">ПЛАНУВАННЯ</h3>
             <p class="paragraf">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="title-section">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="paragraf">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -144,7 +144,7 @@
     <footer>
       <a class="web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <p class="paragraf-fut">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer_contacts">
           <li >
             <a class="mail_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
