--- a/portfolio.html
+++ b/portfolio.html
@@ -55,20 +55,20 @@
     </header>
     <main>
       <ul class="list">
-        <li>
+        <li class="list-items">
           <button class="link1" name="кнопка" type="button">Усі</button>
         </li>
         <li>
-          <button name="кнопка"type="button">Веб-сайти</button>
+          <button class="link1" name="кнопка"type="button">Веб-сайти</button>
         </li>
         <li>
-          <button name="кнопка"type="button">Додатки</button>
+          <button class="link1" name="кнопка"type="button">Додатки</button>
         </li>
         <li>
-          <button name="кнопка"type="button">Дизайн</button>
+          <button class="link1" name="кнопка"type="button">Дизайн</button>
         </li>
         <li>
-          <button name="кнопка"type="button">Маркетинг</button>
+          <button class="link1" name="кнопка"type="button">Маркетинг</button>
         </li>
   
         <!--роботи-->
@@ -106,7 +106,7 @@
             <li>
                 <img src="./images/progect/7.png" alt="">
                 <h3 class="name">Видання Limited Edition</h3>
-                <p>Дизайн</p>
+                <p class ="paragraf">Дизайн</p>
             </li>
             <li>
                 <img src="./images/progect/8.png" alt="">
@@ -124,7 +124,7 @@
     <footer class="footer">
       <a class="web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <p class="paragraf-fut">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer_contacts">
           <li>
             <a class="mail_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
