--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     <meta name="msapplication-TileImage" content="./images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!--favicon_finish-->
+
+    <!-- modern-normalize -->
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
+      crossorigin="anonymous" 
+      referrerpolicy="no-referrer" 
+    />
+    <!-- custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- підключення шрифтів -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
