--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
           <li><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="list">
+      <div class="header-list">
+         <ul class="list">
         <li class="mail_link">
           <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -61,6 +62,8 @@
           <a class="link" href="tell:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
+      </div>
+     
     </header>
     <main>
       <section class="button_title" x>
@@ -73,27 +76,27 @@
       <section>
         <h2 class="visually-hidden">Наші особливості</h2>
         <ul class="list">
-          <li>
+          <li class="about">
             <h3 class="title-section">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="paragraf">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
+          <li class="about-us">
             <h3 class="title-section">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="paragraf">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
+          <li class="about">
             <h3 class="title-section">ПЛАНУВАННЯ</h3>
             <p class="paragraf">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
+          <li class="about">
             <h3 class="title-section">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="paragraf">
               Значимість цих проблем настільки очевидна, що реалізація планових
