--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </h1>
         <button class="button_servise" name="кнопка">Замовити послугу</button>
       </section>
-      <section>
+      <section class="attention">
         <h2 class="visually-hidden">Наші особливості</h2>
         <ul class="list">
           <li class="about">
@@ -108,17 +108,17 @@
       <section class="work">
         <h2 class="work-specific">Чим ми займаємося</h2>
         <ul class="list">
-          <li>
+          <li class="work-photo">
             <img src="./images/img.png" alt="картинка набір коду" width="370" />
           </li>
-          <li>
+          <li class="work-photo">
             <img
               src="./images/img(1).png"
               alt="картинка телефон та ноут"
               width="370"
             />
           </li>
-          <li>
+          <li class="work-photo">
             <img
               src="./images/img(2).png"
               alt="картинка планшет та комп"
@@ -127,25 +127,25 @@
           </li>
         </ul>
       </section>
-      <section> 
+      <section class="command-section"> 
         <h2  class="command">Наша команда</h2>
         <ul class="command_title">
-          <li>
+          <li class="command-fon">
             <img src="./images/1.jpg" alt="" width="270" />
             <h3 class="name">Ігор Дем'яненко</h3>
             <p class="paragraf" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="command-fon">
             <img src="./images/2.jpg" alt="" width="270" />
             <h3 class="name">Ольга Рєпіна</h3>
             <p class="paragraf" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="command-fon">
             <img src="./images/3.jpg" alt="" width="270" />
             <h3 class="name">Микола Тарасов</h3>
             <p class="paragraf" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="command-fon">
             <img src="./images/4.jpg" alt="" width="270" />
             <h3 class="name">Михайло Єрмаков</h3>
             <p class="paragraf" lang="en">UI Designer</p>
