--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- top -->
     <header>
       <nav class="nav">
-        <a class="web" href="./index.html">Web<span class="Studio_color_header">Studio</span></a>
+        <a class="header_web" href="./index.html">Web<span class="Studio_color_header">Studio</span></a>
         <ul class="list_studio">
           <li><a class="link2" href="./index.html">Студія</a></li>
           <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
@@ -54,7 +54,7 @@
         </ul>
       </nav>
       <div class="header-list">
-         <ul class="list">
+         <ul class="nav-list">
         <li class="mail_link">
           <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -154,16 +154,16 @@
       </section>
     </main>
     <!-- basement -->
-    <footer>
-      <a class="web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
-      <address>
+    <footer class="footer">
+      <a class="footer_web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
+      <address class="fut-adress">
         <p class="paragraf-fut">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer_contacts">
           <li >
-            <a class="mail_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="foot_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li >
-            <a class="mail_link" href="tell:+380961111111">+38 096 11 11 111</a>
+            <a class="foot_link" href="tell:+380961111111">+38 096 11 11 111</a>
           </li>
         </ul>
       </address>
