--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
      <!-- top -->
     <header>
       <nav class="nav">
-        <a class="web" href="./index.html">Web<span class="Studio_color_header">Studio</span></a>
+        <a class="header_web" href="./index.html">Web<span class="Studio_color_header">Studio</span></a>
         <ul class="list_studio">
           <li><a class="link" href="./index.html">Студія</a></li>
           <li><a class="link2" href="./portfolio.html">Портфоліо</a></li>
@@ -122,15 +122,15 @@
     </main>
        <!-- basement -->
     <footer class="footer">
-      <a class="web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
+      <a class="footer_web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
       <address>
         <p class="paragraf-fut">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer_contacts">
           <li>
-            <a class="mail_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="foot_link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a class="mail_link" href="tell:+380961111111">+38 096 11 11 111</a>
+            <a class="foot_link" href="tell:+380961111111">+38 096 11 11 111</a>
           </li>
         </ul>
       </address>
