--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,8 @@
           <li><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="list">
+       <div class="header-list">
+         <ul class="nav-list">
         <li class="mail_link">
           <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -52,9 +53,10 @@
           <a class="link" href="tell:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
+      </div>
     </header>
-    <main>
-      <ul class="list">
+    <main class="port">
+      <ul class="list-but">
         <li class="list-items">
           <button class="link1" name="кнопка" type="button">Усі</button>
         </li>
@@ -70,60 +72,60 @@
         <li>
           <button class="link1" name="кнопка"type="button">Маркетинг</button>
         </li>
-  
+      </ul>
         <!--роботи-->
-        <ul class="any-works">
-            <li>
-                <img src="./images/progect/1.png" alt="">
-                <h3 class="name">Технокряк</h3>
-                <p class ="paragraf">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/progect/2.png" alt="">
-                <h3 class="name">Постер New Orlean vs Golden Star</h3>
-                <p class ="paragraf">Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/progect/3.png" alt="">
-                <h3 class="name">Ресторан Seafood</h3>
-                <p class ="paragraf">Додаток</p>
-            </li>           
-            <li>
-                <img src="./images/progect/4.png" alt="">
-                <h3 class="name"> Проєкт Prime</h3>
-                <p class ="paragraf">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/progect/5.png" alt="">
-                <h3 class="name">Проєкт Boxes</h3>
-                <p class ="paragraf">Додаток</p>
-            </li>
-            <li>
-                <img src="./images/progect/6.png" alt="">
-                <h3 class="name">Inspiration has no Borders</h3>
-                <p class ="paragraf">Веб-сайт</p>
-            </li>
-            <li>
-                <img src="./images/progect/7.png" alt="">
-                <h3 class="name">Видання Limited Edition</h3>
-                <p class ="paragraf">Дизайн</p>
-            </li>
-            <li>
-                <img src="./images/progect/8.png" alt="">
-                <h3 class="name">Проєкт LAB</h3>
-                <p class ="paragraf">Маркетинг</p>
-            </li>
-            <li>
-                <img src="./images/progect/9.png" alt="">
-                <h3 class="name">Growing Business</h3>
-                <p class ="paragraf">Додаток</p>
-            </li>
-        </ul>
+      <ul class="any-works">
+          <li class="any-items">
+              <img src="./images/progect/1.png" alt="">
+              <h3 class="name-work">Технокряк</h3>
+              <p class ="any-paragraf">Веб-сайт</p>
+          </li>
+          <li class="any-items">
+              <img src="./images/progect/2.png" alt="">
+              <h3 class="name-work">Постер New Orlean vs Golden Star</h3>
+              <p class ="any-paragraf">Дизайн</p>
+          </li>
+          <li class="any-items">
+              <img src="./images/progect/3.png" alt="">
+              <h3 class="name-work">Ресторан Seafood</h3>
+              <p class ="any-paragraf">Додаток</p>
+          </li>           
+          <li class="any-items">
+              <img src="./images/progect/4.png" alt="">
+              <h3 class="name-work"> Проєкт Prime</h3>
+              <p class ="any-paragraf">Маркетинг</p>
+          </li>
+          <li class="any-items">
+              <img src="./images/progect/5.png" alt="">
+              <h3 class="name-work">Проєкт Boxes</h3>
+              <p class ="any-paragraf">Додаток</p>
+          </li>
+          <li class="any-items">
+              <img src="./images/progect/6.png" alt="">
+              <h3 class="name-work">Inspiration has no Borders</h3>
+              <p class ="any-paragraf">Веб-сайт</p>
+          </li>
+          <li class="any-items">
+              <img src="./images/progect/7.png" alt="">
+              <h3 class="name-work">Видання Limited Edition</h3>
+              <p class ="any-paragraf">Дизайн</p>
+          </li>
+          <li class="any-items">
+              <img src="./images/progect/8.png" alt="">
+              <h3 class="name-work">Проєкт LAB</h3>
+              <p class ="any-paragraf">Маркетинг</p>
+          </li>
+          <li class="any-items">
+              <img src="./images/progect/9.png" alt="">
+              <h3 class="name-work">Growing Business</h3>
+              <p class ="any-paragraf">Додаток</p>
+          </li>
+      </ul>
     </main>
        <!-- basement -->
     <footer class="footer">
       <a class="footer_web" href="./index.html">Web <span class="Studio_color">Studio</span></a>
-      <address>
+      <address class="fut-adress">
         <p class="paragraf-fut">м. Київ, пр-т Лесі Українки, 26</p>
         <ul class="footer_contacts">
           <li>
