--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="container">
     <!-- top -->
     <header>
       <nav class="nav">
@@ -66,14 +66,14 @@
      
     </header>
     <main>
-      <section class="button_title" x>
+      <section class="section" x>
         <h1 class="body-title">
-          Ефективні рішення для <br />
+          Ефективні рішення для <br/>
           вашого бізнесу
         </h1>
         <button class="button_servise" name="кнопка">Замовити послугу</button>
       </section>
-      <section class="attention">
+      <section class="section">
         <h2 class="visually-hidden">Наші особливості</h2>
         <ul class="list">
           <li class="about">
@@ -83,7 +83,7 @@
               формування позиції.
             </p>
           </li>
-          <li class="about-us">
+          <li class="about">
             <h3 class="title-section">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="paragraf">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
@@ -105,48 +105,48 @@
           </li>
         </ul>
       </section>
-      <section class="work">
+      <section class="section">
         <h2 class="work-specific">Чим ми займаємося</h2>
         <ul class="list">
           <li class="work-photo">
-            <img src="./images/img.png" alt="картинка набір коду" width="370" />
+            <img src="./images/img.png" alt="картинка набір коду" width="370px" />
           </li>
           <li class="work-photo">
             <img
               src="./images/img(1).png"
               alt="картинка телефон та ноут"
-              width="370"
+              width="370px"
             />
           </li>
           <li class="work-photo">
             <img
               src="./images/img(2).png"
               alt="картинка планшет та комп"
-              width="370"
+              width="370px"
             />
           </li>
         </ul>
       </section>
-      <section class="command-section"> 
+      <section class="section"> 
         <h2  class="command">Наша команда</h2>
         <ul class="command_title">
           <li class="command-fon">
-            <img src="./images/1.jpg" alt="" width="270" />
+            <img src="./images/1.jpg" alt="" width="270px" height="260px" />
             <h3 class="name">Ігор Дем'яненко</h3>
             <p class="paragraf" lang="en">Product Designer</p>
           </li>
           <li class="command-fon">
-            <img src="./images/2.jpg" alt="" width="270" />
+            <img src="./images/2.jpg" alt="" width="270px" height="260px"  />
             <h3 class="name">Ольга Рєпіна</h3>
             <p class="paragraf" lang="en">Frontend Developer</p>
           </li>
           <li class="command-fon">
-            <img src="./images/3.jpg" alt="" width="270" />
+            <img src="./images/3.jpg" alt="" width="270px" height="260px"  />
             <h3 class="name">Микола Тарасов</h3>
             <p class="paragraf" lang="en">Marketing</p>
           </li>
           <li class="command-fon">
-            <img src="./images/4.jpg" alt="" width="270" />
+            <img src="./images/4.jpg" alt="" width="270px" height="260px"  />
             <h3 class="name">Михайло Єрмаков</h3>
             <p class="paragraf" lang="en">UI Designer</p>
           </li>
