--- a/portfolio.html
+++ b/portfolio.html
@@ -67,11 +67,17 @@
 
         <ul class="nav-list">
           <li class="mail_link">
+            <svg width="16" height="12">
+              <use href="./images/sprite.svg#icon-envelope-hover"> </use>
+            </svg>
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="mail_link">
+            <svg width="16" height="12">
+              <use href="./images/sprite.svg#icon-telepfone-hover"> </use>
+            </svg>
             <a class="link" href="tell:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -181,27 +187,57 @@
     </section>
     </main>
    <!-- basement -->
-    <footer class="footer">
-        <div class="footer-container">
+   <footer class="footer">
+    <div class="footer-container">
+        <div>
           <a class="footer_web" href="./index.html"
-            >Web <span class="Studio_color">Studio</span></a
-          >
-          <address class="fut-adress">
-            <p class="paragraf-fut">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul class="footer_contacts">
-              <li>
-                <a class="foot_link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="foot_link" href="tell:+380961111111"
-                  >+38 096 11 11 111</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
-      </footer>
+          >Web <span class="Studio_color">Studio</span></a
+        >
+        <address class="fut-adress">
+          <p class="paragraf-fut">м. Київ, пр-т Лесі Українки, 26</p>
+          <ul class="footer_contacts">
+            <li class="footer-li">
+              <a class="foot_link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-li">
+              <a class="foot_link" href="tell:+380961111111"
+                >+38 096 11 11 111</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    <div class="wellkom">
+      <h2 class="wellkoms">Приєднуйтесь</h2>
+      <ul class="foot-icon">
+        <li class="ellips">
+          <svg class="link-icon" width="44" height="44">
+            <use class="fon-fut"  href="./images/sprite.svg#icon-instagram"> </use>
+          </svg>
+        </li>
+        <li class="ellips">
+          <svg class="link-icon" width="44" height="44">
+            <use class="fon-fut"  href="./images/sprite.svg#icon-twitter"> </use>
+          </svg>
+        </li>
+        <li class="ellips">
+          <svg class="link-icon" width="44" height="44">
+            <use class="fon-fut"  href="./images/sprite.svg#icon-facebook"> </use>
+          </svg>
+
+        </li>
+        <li class="ellips">
+          <svg class="link-icon" width="44" height="44">
+            <use class="fon-fut"  href="./images/sprite.svg#icon-linkedin"> </use>
+          </svg>
+
+        </li>
+      </ul>
+    </div>
+      </div>
+     
+  </footer>
 </body>
 </html>
